# fit-wizard

./: .gitignore  README.md  main.py  pyproject.toml
fit_wizard/lang/: __init__.py  en.json  it.json
fit_wizard/ui/: resources.qrc  wizard.ui
fit_wizard/view/: wizard.py  wizard_ui.py
