[tool.poetry]
name = "fit_wizard"
version = "1.0.0"
description = "FIT Wizard Module"
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_wizard" }
]


[tool.poetry.dependencies]
python = ">3.9.1,<3.13"
PySide6 = "6.9.0"


fit-verify-pdf-timestamp= {git = "https://github.com/fit-project/fit-verify-pdf-timestamp.git", rev = "main"}
fit-verify-pec = {git = "https://github.com/fit-project/fit-verify-pec.git", rev = "main"}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"