[tool.poetry]
name = "fit_wizard"
version = "1.0.0"
description = "FIT Wizard Module"
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_wizard" }
]


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"


fit-verify-pdf-timestamp= {git = "https://github.com/fit-project/fit-verify-pdf-timestamp.git", branch = "chore/update-python-compatibility-3.13"}
fit-verify-pec = {git = "https://github.com/fit-project/fit-verify-pec.git", branch = "chore/update-python-compatibility-3.13"}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"